Use valueOf instead of new to create Integer/Double/Long objects.